+ Add tick to generate trans_id
+ Disable column GENERATE in spec
+ Validators finalization
+ Set validations violation processing mode
+ Trans ID can be set in MainWindow
+ Move output_file_format from SaveButton to FileDialog
+ Change to Python 3.12.2
+ Fix double validation
+ Remove: "File parsed: signal/data/default/default_message.json"
+ Check all custom validations
+ Error RuntimeError: wrapped C/C++ object of type WirelessHandler has been deleted
+ Add custom data types like list[str]
+ Change approach to fields path
+ Move log-browser creation to Logger
+ Trans_id can be generated in MainWindow
+ Add reversal trans_id generation with suffix _R

# v0.18

+ Stop cascade process when try to parse a file with unknown extension and file not found
+ After parsing of default file focus restored in the middle of JSON


• Add tabs by QTabWidget
    • Button "add tab"
    • Dynamic tab name
    + Tabs limit
    + Fix search in different tabs
    + Add fill method
    + Open / close new tab
    + Hotkeys - new tab+, close tab+, next+, previous+
    + Go to new tab after opening
    + Refactoring
    + Active tab highlighting
    + Parse default message when open new tab (no logging)


• Drag and drop files to JsonView
• Respect JSON-mode when set field value from complex fields constructor
• Error on console when run AboutWindow - Could not find codec parameters for stream
• Change name to SIGNAL in Document
• Reflect in the document - Main settings, the specification+, files format+, custom validations
• Set complex fields full expanding when switch JSON mode
• Multi-license window bug

• Licensing preparation
    • Change the framework to pyside
    • Buy the logo
    • Gif copyright
    • Buy music
    + Change the name
    • Prepare code
    • Get Unlimit's disclaimer

• No data in socket if delete field in spec
• Exceptions policy
• Correct and publish the Specification
• Publish on confluence
• Spec explanation

• Console mode
• API console mode
• Undo / Redo
