@@ -164,6 +164,7 @@
 
 # v0.18
 
+
 + Stop cascade process when try to parse a file with unknown extension and file not found
 + After parsing of default file focus restored in the middle of JSON
 
@@ -171,6 +172,7 @@
 • Add tabs by QTabWidget
     • Button "add tab"
     • Dynamic tab name
+    • Restore "Copy bitmap" button
     + Tabs limit
     + Fix search in different tabs
     + Add fill method
@@ -181,14 +183,15 @@
     + Active tab highlighting
     + Parse default message when open new tab (no logging)
 
-
++ Multi-license window bug
+• license window acceptance bug
 • Drag and drop files to JsonView
 • Respect JSON-mode when set field value from complex fields constructor
 • Error on console when run AboutWindow - Could not find codec parameters for stream
 • Change name to SIGNAL in Document
 • Reflect in the document - Main settings, the specification+, files format+, custom validations
 • Set complex fields full expanding when switch JSON mode
-• Multi-license window bug
+
 
 • Licensing preparation
     • Change the framework to pyside
